# cudahash

./: .gitignore  CMakeLists.txt  README.md
doc/: 02152022-ethash_cuda_miner_kernel.ptx  02162022-build-log-all-sm.txt  flow-debug-message.txt  props.txt  shuffle-test.md
expr/: CMakeLists.txt  shuffle.cu  shuffle.ptx  t36.py  t419.cu  vector_add.cpp
expr/kernel/: CMakeLists.txt  vector_add.cu
getopt/: CMakeLists.txt  getopt.c  getopt.h
libcuda/: CMakeLists.txt  dagger_shuffled.cuh  epoch_ctx.hpp  ethash_cuda_miner_kernel.cu  ethash_cuda_miner_kernel.h
test/: eth_tester.cpp  eth_tester.hpp  eth_utils.hpp  main.cpp  nv_dev.cpp  nv_dev.hpp
